--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"name":"Hexo","short_name":null,"start_url":"/blog/index.html","theme_color":null,"background_color":null,"display":"standalone","icons":[{"src":"","sizes":"","type":null}]}
+{"name":"TataLake的小窝","short_name":null,"start_url":"/blog/index.html","theme_color":null,"background_color":null,"display":"standalone","icons":[{"src":"","sizes":"","type":null}]}
